@startuml SlaughterhouseDomainModel
!include astah-min.puml
scale 3

class Animal {
    animalId
    arrivalAt
    liveWeight
    origin
}

class PlaceOfOrigin
{
    id
    name
}

class Part {
    partId
    weight
}

class PartType
{
    id
    name
}

class Tray {
    trayId
    maxWeightCapacity
    partType
}

class Product {
    id
    productName
}

class Package {
    partType
    amount
}

class HalfAnimal {

}

Tray "0..1" -- "*" Part : consists of ▶
Product "*" -- "1..*" Tray : comes from ▶
Part "*" -- "1" Animal : comes from ▶
Package --|> Product
HalfAnimal --|> Product
Animal "*" -- "1" PlaceOfOrigin : comes from ▶
Part "*" -- "1" PartType : is of type ▶

@enduml